--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  background-image: url(../images/hero-bg.jpg);
+  background-image: url();
   background-size: cover;
   background-position: 80%;
   background-attachment: fixed;
@@ -63,4 +63,91 @@ header nav ul li a:hover {
   color: var(--secondary-color);
   border-radius: 15px;
   text-shadow: none;
+}
+
+.hero {
+  background-image: url();
+  background-size: cover;
+  background-position: 80%;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+/* Hero Style End */
+
+/* Hero Form Start */
+.hero-form {
+  color: var(--secondary-color);
+  background-color: var(--tertiary-color);
+  padding: 20px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: var(--secondary-color);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+}
+
+.hero-form h3 {
+  font-size: 24px;
+  margin: 0px;
+}
+
+.hero-form p {
+  margin: 5px 0 15px 0;
+}
+
+.form-input {
+  font-size: 16px;
+  width: 100%;
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  display: block;
+  margin-bottom: 15px;
+  padding: 7px 15px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.form-input:focus {
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
+}
+
+.hero-form label {
+  margin: 0 5px;
+  width: 40%;
+  margin: 3.5%;
+}
+
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: black;
+  font-size: 18px;
+  line-height: 1.2;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 45px;
+  color: var(--primary-color);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.hero-form button {
+  background-color: var(--secondary-color);
+  color: var(--tertiary-color);
+  padding: 10px 20px;
+  margin: 5px;
+  border: none;
+  font-size: 16px;
+  border-radius: 10px;
+}
+
+.hero-form button:hover {
+  background-color: var(--primary-color);
+  color: var(--tertiary-color);
 }
