--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  background-image: url(../images/IMG_0585.jpg);
+  background-image: url();
   background-size: cover;
   background-position: 80%;
   background-attachment: fixed;
@@ -66,10 +66,11 @@ header nav ul li a:hover {
 }
 
 .hero {
-  background-image: url(../images/IMG_0585.jpg);
+  background-image: url();
   background-size: cover;
   background-position: 80%;
   background-attachment: fixed;
+  background-color: var(--tertiary-color);
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -89,13 +90,17 @@ header nav ul li a:hover {
   border-radius: 15px;
 }
 
-.hero-form h3 {
+.hero-form h2 {
   font-size: 24px;
   margin: 0px;
+  font-style: italic;
+  color: var(--primary-color);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form p {
   margin: 5px 0 15px 0;
+  color: black;
 }
 
 .form-input {
@@ -119,13 +124,14 @@ header nav ul li a:hover {
   margin: 0 5px;
   width: 40%;
   margin: 3.5%;
+  color: black;
 }
 
 .hero-cta {
   width: 35%;
   text-align: right;
   margin: 3.5%;
-  color: white;
+  color: black;
   font-size: 18px;
   line-height: 1.2;
 }
@@ -242,6 +248,27 @@ header nav ul li a:hover {
   background: var(--primary-color);
 }
 
+.events h2 {
+  font-style: italic;
+  font-size: 45px;
+  color: var(--primary-color);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.address h3 {
+  font-style: italic;
+  font-size: 35px;
+  color: var(--primary-color);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.contact-form h3 {
+  font-style: italic;
+  font-size: 35px;
+  color: var(--primary-color);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
 footer {
   background: var(--primary-color);
   width: 100%;
@@ -253,7 +280,7 @@ footer {
 
 footer h2 {
   color: var(--tertiary-color);
-  font-size: 30px;
+  font-size: 20px;
   margin: 0;
 }
 
