--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ header nav ul li a {
 
 header nav ul li a:hover {
   background: var(--primary-color);
-  color: var(--secondary-color);
+  color: var(--tertiary-color);
   border-radius: 15px;
   text-shadow: none;
 }
@@ -80,12 +80,12 @@ header nav ul li a:hover {
 
 /* Hero Form Start */
 .hero-form {
-  color: var(--secondary-color);
+  color: var(--primary-color);
   background-color: var(--tertiary-color);
   padding: 20px;
   border-style: solid;
   border-width: 3px;
-  border-color: var(--secondary-color);
+  border-color: var(--primary-color);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
 }
@@ -106,8 +106,8 @@ header nav ul li a:hover {
 .form-input {
   font-size: 16px;
   width: 100%;
-  color: var(--secondary-color);
-  border: 1px solid var(--secondary-color);
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
   display: block;
   margin-bottom: 15px;
   padding: 7px 15px;
@@ -144,7 +144,7 @@ header nav ul li a:hover {
 }
 
 .hero-form button {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   color: var(--tertiary-color);
   padding: 10px 20px;
   margin: 5px;
@@ -154,7 +154,7 @@ header nav ul li a:hover {
 }
 
 .hero-form button:hover {
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   color: var(--tertiary-color);
 }
 
@@ -214,11 +214,11 @@ header nav ul li a:hover {
 
 .contact-form input,
 .contact-form textarea {
-  border: 1px solid var(--secondary-color);
+  border: 1px solid var(--primary-color);
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: var(--secondary-color);
+  color: var(--primary-color);
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
@@ -235,7 +235,7 @@ header nav ul li a:hover {
 .contact-form button {
   width: 100%;
   border: none;
-  background: var(--secondary-color);
+  background: var(--primary-color);
   color: var(--tertiary-color);
   text-align: center;
   padding: 15px 0;
@@ -245,7 +245,7 @@ header nav ul li a:hover {
 
 .contact-form button:hover {
   color: var(--tertiary-color);
-  background: var(--primary-color);
+  background: var(--secondary-color);
 }
 
 .events h2 {
