--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ header nav ul li a:hover {
 .events {
   background-color: var(--tertiary-color);
   color: var(--primary-color);
-  height: 400px;
+  height: auto;
 }
 
 .contact {
