--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,7 @@ header nav ul li a:hover {
   border-color: var(--primary-color);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
+  width: 35%;
 }
 
 .hero-form h2 {
