--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,7 @@ header nav ul li a:hover {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  align-items: center;
 }
 
 .hero img {
@@ -343,7 +344,6 @@ footer div {
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 768px) {
   section {
-    padding: 30px 15px;
   }
 }
 
