Added troop roster

--- a/assets/css/troop-roster-style.css
+++ b/assets/css/troop-roster-style.css
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: var(--tertiary-color);
 }
 
 .section-title {
@@ -82,7 +83,43 @@ header nav ul li a:hover {
   height: 200px;
 }
 
-.troop-roster {
+.cards-title {
+  font-size: 36px;
+  text-align: center;
+  color: var(--primary-color);
+  margin: 0;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 5%;
+}
+
+.card {
+  font-size: 25px;
+  box-sizing: border-box;
+  text-align: center;
+  color: var(--primary-color);
+  background-color: var(--tertiary-color);
+  padding: 20px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: var(--primary-color);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+}
+
+.card img {
+  width: 150px;
+  height: 150px;
+  padding: 5%;
+}
+
+.patrol {
+  padding: 100px;
 }
 
 .links {
@@ -115,11 +152,6 @@ aside nav ul li a:hover {
   text-shadow: none;
 }
 
-.img {
-  width: 40%;
-  height: 200px;
-}
-
 footer {
   background: var(--primary-color);
   width: 100%;
@@ -130,6 +162,7 @@ footer {
 }
 
 footer h2 {
+  background-color: var(--primary-color);
   color: var(--tertiary-color);
   font-size: 20px;
   margin: 0;
