--- a/assets/css/troop-roster-style.css
+++ b/assets/css/troop-roster-style.css
@@ -115,6 +115,11 @@ header nav ul li a:hover {
   border-radius: 15px;
 }
 
+.card p {
+  font-size: 20px;
+  padding: 10px;
+}
+
 .card img {
   width: 150px;
   height: 150px;
