--- a/assets/css/photos-style.css
+++ b/assets/css/photos-style.css
@@ -10,6 +10,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: var(--tertiary-color);
+}
+
 .section-title {
   color: var(--primary-color);
   border-bottom: 3px solid;
@@ -78,8 +82,36 @@ header nav ul li a:hover {
 }
 
 .title {
-  background-color: var(--tertiary-color);
   height: 200px;
+}
+
+.photo-title {
+  font-size: 36px;
+  text-align: left;
+  color: var(--primary-color);
+  padding: 0 0 30px 30px;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.gallery {
+  height: 300px;
+  width: 400px;
+  overflow: hidden;
+}
+
+.gallery:hover {
+  border: 1px solid #777;
+}
+
+.gallery img {
+  width: 400px;
+  height: auto;
 }
 
 footer {
