--- a/assets/css/photos-style.css
+++ b/assets/css/photos-style.css
@@ -14,17 +14,6 @@ body {
   background-color: var(--tertiary-color);
 }
 
-.section-title {
-  color: var(--primary-color);
-  border-bottom: 3px solid;
-  padding: 20px;
-  text-align: center;
-  margin: 0 auto 35px auto;
-  width: 50%;
-  font-style: italic;
-  font-size: 55px;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
 
 header {
   padding: 20px 35px;
@@ -39,7 +28,7 @@ header {
   background-size: cover;
   background-position: 80%;
   background-attachment: fixed;
-  z-index: 9999;
+  z-index: 99;
 }
 
 header h1 {
@@ -81,6 +70,18 @@ header nav ul li a:hover {
   text-shadow: none;
 }
 
+.section-title {
+  color: var(--primary-color);
+  border-bottom: 3px solid;
+  padding: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+  font-style: italic;
+  font-size: 55px;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
 .title {
   height: 200px;
 }
@@ -88,30 +89,98 @@ header nav ul li a:hover {
 .photo-title {
   font-size: 36px;
   text-align: left;
+  margin-left: 55px;
   color: var(--primary-color);
   padding: 0 0 30px 30px;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.container {
+.main {
+  width: 100%;
+  flex-direction: column;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 0px 60px 0px;
 }
 
 .gallery {
-  height: 300px;
-  width: 400px;
+  display: grid;
+  width: 90%;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+}
+
+.gallery-item {
+  cursor: pointer;
   overflow: hidden;
+  border-radius: 4px;
 }
 
-.gallery:hover {
-  border: 1px solid #777;
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.3s ease-in-out;
 }
 
-.gallery img {
-  width: 400px;
+.gallery-item img:hover {
+  transform: scale(1.1);
+}
+
+@media (max-width: 950px) {
+  .gallery {
+      grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 550px) {
+  .gallery {
+      grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+/*Image modal*/
+.modal {
+  z-index: 9999;
+  width: auto;
   height: auto;
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.733);
+  margin-top: -1px;
+  animation: zoom 0.3s ease-in-out;
+}
+
+@keyframes zoom {
+  from {
+      transform: scale(0);
+  }
+  to {
+      transform: scale(1);
+  }
+}
+
+.modal img {
+  width: 50%;
+  object-fit: cover;
+}
+
+.closeBtn {
+  color: rgba(255, 255, 255, 0.87);
+  font-size: 25px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 20px;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+.closeBtn:hover {
+  color: rgb(255, 255, 255);
 }
 
 footer {
