--- a/assets/css/photos-style.css
+++ b/assets/css/photos-style.css
@@ -143,8 +143,8 @@ header nav ul li a:hover {
 /*Image modal*/
 .modal {
   z-index: 9999;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   display: flex;
