--- a/assets/css/photos-style.css
+++ b/assets/css/photos-style.css
@@ -138,6 +138,9 @@ header nav ul li a:hover {
   .gallery {
       grid-template-columns: repeat(1, 1fr);
   }
+  .modal img {
+    width: 100%;
+  }
 }
 
 /*Image modal*/
@@ -245,13 +248,14 @@ footer div {
 }
 
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
-@media screen and (max-width: 768px) {
-  section {
+@media screen and (max-width: 1200px) {
+  .modal img {
+    width: 100%;
   }
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-@media screen AND (max-width: 575px) {
+@media screen and (max-width: 575px) {
   .hero-form button {
     width: 100%;
   }
