--- a/assets/css/photos-style.css
+++ b/assets/css/photos-style.css
@@ -1,85 +1,17 @@
 :root {
-  --primary-color: #398657;
-  --secondary-color: #af1313;
-  --tertiary-color: #d6ba7c;
+  --primary-color: #111;
+  --secondary-color: #818181;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Lucida Sans Typewriter;
 }
 
 body {
-  background-color: var(--tertiary-color);
-}
-
-
-header {
-  padding: 20px 35px;
-  background-color: var(--tertiary-color);
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  background-image: url();
-  background-size: cover;
-  background-position: 80%;
-  background-attachment: fixed;
-  z-index: 99;
-}
-
-header h1 {
-  font-weight: bold;
-  font-size: 36px;
-  color: var(--primary-color);
-  margin: 0;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-header a {
-  text-decoration: none;
-  color: var(--primary-color);
-}
-
-header nav {
-  margin: 7px 0;
-}
-
-header nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
-}
-
-header nav ul li a {
-  padding: 10px 15px;
-  font-weight: lighter;
-  font-size: 1.55vw;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-header nav ul li a:hover {
-  background: var(--primary-color);
-  color: var(--tertiary-color);
-  border-radius: 15px;
-  text-shadow: none;
-}
-
-.section-title {
-  color: var(--primary-color);
-  border-bottom: 3px solid;
-  padding: 20px;
-  text-align: center;
-  margin: 0 auto 35px auto;
-  width: 50%;
-  font-style: italic;
-  font-size: 55px;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  transition: background-color .5s;
 }
 
 .title {
@@ -92,7 +24,6 @@ header nav ul li a:hover {
   margin-left: 55px;
   color: var(--primary-color);
   padding: 0 0 30px 30px;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .main {
@@ -114,7 +45,8 @@ header nav ul li a:hover {
 .gallery-item {
   cursor: pointer;
   overflow: hidden;
-  border-radius: 8px;
+  margin: 15px;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
 }
 
 .gallery-item img {
@@ -193,7 +125,7 @@ footer {
 }
 
 footer h2 {
-  color: var(--tertiary-color);
+  color: white;
   font-size: 20px;
   margin: 0;
 }
@@ -204,43 +136,9 @@ footer div {
 }
 
 @media screen and (max-width: 980px) {
-  header {
-    padding-bottom: 0;
-    justify-content: center;
-    position: relative;
-  }
-
-  header h1 {
-    width: 100%;
-    text-align: center;
-  }
-
-  header nav ul {
-    margin-top: 20px;
-    width: 100%;
-    justify-content: center;
-  }
-
-  header nav ul li a {
-    font-size: 20px;
-  }
-
   footer h2 footer div {
     text-align: center;
     width: 100%;
-  }
-
-  .hero-cta,
-  .hero-form {
-    width: 100%;
-  }
-
-  .hero-cta {
-    text-align: center;
-  }
-
-  .contact-info iframe {
-    flex: 1 100%;
   }
 }
 
@@ -253,19 +151,4 @@ footer div {
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
-  .hero-form button {
-    width: 100%;
-  }
-
-  .contact-info {
-    text-align: center;
-  }
-
-  .contact-info > * {
-    flex: 0 100%;
-  }
-
-  .contact-form {
-    order: 3;
-  }
 }
