--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,84 +1,28 @@
 :root {
-  --primary-color: #398657;
-  --secondary-color: rgb(100, 181, 100);
-  --tertiary-color: #d6ba7c;
+  --primary-color: #111;
+  --secondary-color: #818181;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Lucida Sans Typewriter;
 }
 
 body {
-  background-color: var(--tertiary-color);
+  transition: background-color .5s;
 }
 
-.section-title {
-  color: var(--primary-color);
-  border-bottom: 3px solid;
-  padding: 20px;
-  text-align: center;
-  margin: 0 auto 35px auto;
-  width: 50%;
-  font-style: italic;
-  font-size: 55px;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
 
 header {
-  padding: 20px 35px;
-  background-color: var(--tertiary-color);
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  background-image: url();
-  background-size: cover;
-  background-position: 80%;
-  background-attachment: fixed;
-  z-index: 9999;
+  height: 175px;
 }
 
 header h1 {
-  font-weight: bold;
-  font-size: 36px;
-  color: var(--primary-color);
-  margin: 0;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-header a {
-  text-decoration: none;
-  color: var(--primary-color);
-}
-
-header nav {
-  margin: 7px 0;
-}
-
-header nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
-}
-
-header nav ul li a {
-  padding: 10px 15px;
-  font-weight: lighter;
-  font-size: 1.55vw;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-header nav ul li a:hover {
-  background: var(--primary-color);
-  color: var(--tertiary-color);
-  border-radius: 15px;
-  text-shadow: none;
+  padding-top: 25px;
+  font-size: 100px;
+  text-align: center;
 }
 
 footer {
@@ -91,7 +35,7 @@ footer {
 }
 
 footer h2 {
-  color: var(--tertiary-color);
+  color: white;
   font-size: 20px;
   margin: 0;
 }
@@ -101,70 +45,103 @@ footer div {
   text-align: right;
 }
 
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: var(--primary-color);
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: white;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: var(--secondary-color);
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  cursor: pointer;
+  font-size: 30px;
+  width: 50px;
+  position: fixed;
+  margin-top: 20px;
+  margin-left: 20px;
+  text-align: center;
+  transition: margin-left .5s;
+  border: 2px solid var(--primary-color);
+  border-radius: 8px;
+}
+
+#main:hover {
+  background-color: var(--secondary-color);
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+
+  .sidenav a {
+    font-size: 18px;
+  }
+}
+
+.header img {
+  width: 100px;
+  height: auto;
+  margin-right: 50px;
+  margin-top: 15px;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.section-title {
+  color: var(--primary-color);
+  border-bottom: 3px solid;
+  padding: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+  font-size: 55px;
+}
+
 .hero {
-  background-image: url();
-  background-size: cover;
-  background-position: 80%;
-  background-attachment: fixed;
-  background-color: var(--tertiary-color);
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
 }
 
-.hero-form {
-  color: var(--primary-color);
-  background-color: var(--tertiary-color);
-  padding: 20px;
-  border-style: solid;
-  border-width: 3px;
-  border-color: var(--primary-color);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  border-radius: 15px;
-  width: 35%;
-}
-
-.hero-form h2 {
-  font-size: 24px;
-  margin: 0px;
-  font-style: italic;
-  color: var(--primary-color);
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.hero-form p {
-  margin: 5px 0 15px 0;
-  color: black;
-}
-
-.form-input {
-  font-size: 16px;
-  width: 100%;
-  color: var(--primary-color);
+.hero-image img {
+  margin: 50px;
   border: 1px solid var(--primary-color);
-  display: block;
-  margin-bottom: 15px;
-  padding: 7px 15px;
-  border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.75);
-}
-
-.form-input:focus {
-  background-color: rgba(255, 255, 255, 1);
-  outline: none;
-}
-
-.hero-form label {
-  margin: 0 5px;
-  width: 40%;
-  margin: 3.5%;
-  color: black;
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
 }
 
 .hero-cta {
-  width: 35%;
-  text-align: right;
+  width: 80%;
+  text-align: center;
   margin: 3.5%;
   color: black;
   font-size: 18px;
@@ -172,38 +149,14 @@ footer div {
 }
 
 .hero-cta h2 {
-  font-style: italic;
   font-size: 45px;
   color: var(--primary-color);
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.hero-form button {
-  background-color: var(--primary-color);
-  color: var(--tertiary-color);
-  padding: 10px 20px;
-  margin: 5px;
-  border: none;
-  font-size: 16px;
-  border-radius: 10px;
-}
-
-.hero-form button:hover {
-  background-color: var(--secondary-color);
-  color: var(--tertiary-color);
-}
-
-.title {
-  background-color: var(--tertiary-color);
-  height: auto;
-}
-
-.contact {
-  background: var(--tertiary-color);
-}
-
-.contact h2 {
-  color: var(--primary-color);
+.links img {
+  margin: 0 50px 50px 50px;
+  border: 1px solid var(--primary-color);
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
 }
 
 .contact-info {
@@ -229,16 +182,9 @@ footer div {
   font-size: 32px;
 }
 
-.contact-info p,
-.contact-info address {
-  margin: 20px 0;
-  line-height: 1.5;
-  font-size: 16px;
-  font-style: normal;
-}
-
-.contact-info a {
-  color: var(--primary-color);
+.contact-form {
+  text-align: center;
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
 }
 
 .contact-form input,
@@ -248,10 +194,8 @@ footer div {
   padding: 7px 15px;
   font-size: 16px;
   color: var(--primary-color);
-  width: 100%;
-  margin-bottom: 15px;
-  margin-top: 5px;
-  border-radius: 10px;
+  width: 90%;
+  margin: 5px auto 15px auto;
   background-color: rgba(255, 255, 255, 0.75);
 }
 
@@ -262,73 +206,35 @@ footer div {
 }
 
 .contact-form button {
-  width: 100%;
+  width: 90%;
   border: none;
   background: var(--primary-color);
-  color: var(--tertiary-color);
+  color: white;
   text-align: center;
   padding: 15px 0;
+  margin-bottom: 25px;
   font-size: 16px;
-  border-radius: 10px;
 }
 
 .contact-form button:hover {
-  color: var(--tertiary-color);
   background: var(--secondary-color);
 }
 
-.events h2 {
-  font-style: italic;
-  font-size: 45px;
-  color: var(--primary-color);
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.address h3 {
-  font-style: italic;
-  font-size: 35px;
-  color: var(--primary-color);
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
 .contact-form h3 {
-  font-style: italic;
+  margin: 25px;
   font-size: 35px;
   color: var(--primary-color);
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
-  header {
-    padding-bottom: 0;
-    justify-content: center;
-    position: relative;
-  }
-
-  header h1 {
-    width: 100%;
-    text-align: center;
-  }
-
-  header nav ul {
-    margin-top: 20px;
-    width: 100%;
-    justify-content: center;
-  }
-
-  header nav ul li a {
-    font-size: 20px;
-  }
-
   footer h2 footer div {
     text-align: center;
     width: 100%;
   }
 
-  .hero-cta,
-  .hero-form {
+  .hero-cta {
     width: 100%;
   }
 
