--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,6 +245,10 @@ footer div {
   .contact-info iframe {
     flex: 1 100%;
   }
+
+  .header img {
+    margin: 0;
+  }
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@@ -263,5 +267,9 @@ footer div {
 
   .contact-form {
     order: 3;
+  }
+
+  header h1 {
+    display: none;
   }
 }
