--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,4 +306,9 @@ footer div {
   header h1 {
     display: none;
   }
+  
+  .hero-image h2 {
+    margin-top: 70px;
+    font-size: 35px;
+  }
 }
