--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,8 +112,8 @@ footer div {
   margin-right: 50px;
   margin-top: 15px;
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 50px;
+  top: 15px;
 }
 
 .section-title {
