--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,7 @@ footer div {
   cursor: pointer;
   font-size: 35px;
   width: 50px;
+  height: 50px;
   position: fixed;
   margin-top: 30px;
   margin-left: 30px;
