--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,8 +81,8 @@ footer div {
 #main {
   cursor: pointer;
   font-size: 35px;
-  width: 45px;
-  height: 50px;
+  width: 50px
+  height: 45px;
   position: fixed;
   margin-top: 30px;
   margin-left: 30px;
