--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ footer div {
 #main {
   cursor: pointer;
   font-size: 35px;
-  width: 50px
+  width: 50px;
   height: 45px;
   position: fixed;
   margin-top: 30px;
