--- a/assets/css/photos-style.css
+++ b/assets/css/photos-style.css
@@ -14,15 +14,21 @@ body {
 }
 
 .title {
-  height: 200px;
   text-align: center;
 }
 
-.title span {
-  font-size: 25px;
+.category {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.category span {
+  font-size: 35px;
   font-weight: 700;
   color: var(--primary-color);
-  padding: 8px 8px 8px 32px;
+  margin: 15px;
   transition: 0.3s;
   cursor: pointer;
 }
@@ -45,7 +51,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px 0px 60px 0px;
+  margin: 20px 0px 60px 0px;
 }
 
 .gallery {
@@ -84,28 +90,6 @@ body {
       grid-template-columns: repeat(1, 1fr);
   }
 }
-
-/* New Modal */
-
-.modal {
-  position: fixed;
-  top: 10%;
-  padding: 40px 50px;
-  border-radius: 8px;
-  background-color: white;
-  z-index: 60000;
-  width: 400px;
-  min-height: 100px;
-  display: none;
-  left: 50%;
-  margin-left: -200px;
-  max-height: 80%;
-  box-sizing: border-box;
-}
-
-  .modal.on {
-      display: block;
-  }
 
 /*Image modal*/
 .modal {
