--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,10 +132,6 @@ footer div {
   text-align: center;
 }
 
-.title span:hover {
-  color: var(--secondary-color);
-}
-
 .category {
   display: flex;
   flex-wrap: wrap;
@@ -143,13 +139,18 @@ footer div {
   justify-content: space-evenly;
 }
 
-.category span {
+.category a {
+  text-decoration: none;
   font-size: 35px;
   font-weight: 700;
   color: var(--primary-color);
   margin: 15px;
   transition: 0.3s;
   cursor: pointer;
+}
+
+.category a:hover {
+  color: var(--secondary-color);
 }
 
 .hero {
