--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* General Styles */
 :root {
   --primary-color: #111;
   --secondary-color: #818181;
@@ -15,6 +16,22 @@ body {
   transition: background-color .5s;
 }
 
+.section-title {
+  color: var(--primary-color);
+  border-bottom: 3px solid;
+  padding: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+  font-size: 65px;
+}
+
+.title {
+  text-align: center;
+}
+/* End General Styles */
+
+/* Header Styles */
 header {
   height: 175px;
 }
@@ -25,26 +42,17 @@ header h1 {
   text-align: center;
 }
 
-footer {
-  background: var(--tertiary-color);
-  width: 100%;
-  padding: 40px 35px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+.header img {
+  width: 100px;
+  height: auto;
+  position: absolute;
+  right: 50px;
+  top: 15px;
 }
+/* End Header Styles */
 
-footer h2 {
-  color: white;
-  font-size: 20px;
-  margin: 0;
-}
 
-footer div {
-  line-height: 1.5;
-  text-align: right;
-}
-
+/* Navbar Styles */
 .sidenav {
   height: 100%;
   width: 0;
@@ -90,7 +98,7 @@ footer div {
   position: fixed;
   margin-top: 30px;
   margin-left: 30px;
-  transition: margin-left .5s;
+  padding-bottom: 5px;
   border: 2px solid var(--primary-color);
   border-radius: 8px;
   transition: 0.3s ease-in-out;
@@ -110,27 +118,21 @@ footer div {
     font-size: 18px;
   }
 }
+/* End Navbar Styles */
 
-.header img {
-  width: 100px;
-  height: auto;
-  position: absolute;
-  right: 50px;
-  top: 15px;
-}
-
+/* Back To Top Button Styles */
 #myBtn {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
+  display: none; 
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
   border: 2px solid var(--primary-color);
-  background-color: transparent;
-  outline: none; /* Remove outline */
-  color: #111; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  border-radius: 100%; /* Rounded corners */
-  font-size: 25px; /* Increase font size */
+  background-color: var(--secondary-color);
+  outline: none;
+  color: #111;
+  cursor: pointer; 
+  border-radius: 100%; 
+  font-size: 25px;
   height: 50px;
   width: 50px;
   transition: 0.3s ease-in-out;
@@ -138,23 +140,33 @@ footer div {
 
 #myBtn:hover {
   transform: scale(1.1);
-  background-color: var(--secondary-color);
+  
+}
+/* End Back To Top Button Styles */
+
+/* Footer Styles */
+footer {
+  background: var(--primary-color);
+  width: 100%;
+  padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.section-title {
-  color: var(--primary-color);
-  border-bottom: 3px solid;
-  padding: 20px;
-  text-align: center;
-  margin: 0 auto 35px auto;
-  width: 50%;
-  font-size: 65px;
+footer h2 {
+  color: white;
+  font-size: 20px;
+  margin: 0;
 }
 
-.title {
-  text-align: center;
+footer div {
+  line-height: 1.5;
+  text-align: right;
 }
+/* Footer Styles */
 
+/* Category Styles */
 .category {
   display: flex;
   flex-wrap: wrap;
@@ -175,7 +187,9 @@ footer div {
 .category a:hover {
   color: var(--secondary-color);
 }
+/* End Category Styles */
 
+/* Hero Section Styles */
 .hero {
   display: flex;
   justify-content: center;
@@ -215,7 +229,9 @@ footer div {
 .hero-cta p {
   font-size: 25px;
 }
+/* End Hero Section Styles */
 
+/* Links on Homepage Styles */
 .links {
   display: flex;
   flex-wrap: wrap;
@@ -233,30 +249,9 @@ footer div {
 .links img:hover {
   transform: scale(1.1);
 }
+/* End Links on Homepage Styles */
 
-.contact-info {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.contact-info > * {
-  flex: 1;
-  margin: 15px;
-}
-
-.contact-info iframe {
-  height: 400px;
-}
-
-.contact-info div {
-  color: black;
-}
-
-.contact-info h3 {
-  color: var(--primary-color);
-  font-size: 32px;
-}
-
+/* Contact Form Styles */
 .contact-form {
   text-align: center;
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
@@ -306,7 +301,9 @@ footer div {
   font-size: 35px;
   color: var(--primary-color);
 }
+/* End Contact Form Styles */
 
+/* History of Soup Styles */
 .history {
   display: flex;
   justify-content: center;
@@ -326,7 +323,139 @@ footer div {
 .soup h2 {
   margin-top: 70px;
 }
+/* End History of Soup Styles */
 
+/* Photo Styles */
+.photo-title {
+  font-size: 36px;
+  text-align: left;
+  margin-left: 55px;
+  color: var(--primary-color);
+  padding: 0 0 30px 30px;
+}
+
+.main {
+  width: 100%;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0px 60px 0px;
+}
+
+.gallery {
+  display: grid;
+  width: 90%;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+}
+
+.gallery-item {
+  cursor: pointer;
+  overflow: hidden;
+  margin: 15px;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.3s ease-in-out;
+}
+
+.gallery-item img:hover {
+  transform: scale(1.1);
+}
+
+/*Image modal*/
+.modal {
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.733);
+  margin-top: -1px;
+  animation: zoom 0.3s ease-in-out;
+}
+
+@keyframes zoom {
+  from {
+      transform: scale(0);
+  }
+  to {
+      transform: scale(1);
+  }
+}
+
+.modal img {
+  width: 50%;
+  object-fit: cover;
+}
+
+.closeBtn {
+  color: rgba(255, 255, 255, 0.87);
+  font-size: 25px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 20px;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+.closeBtn:hover {
+  color: rgb(255, 255, 255);
+}
+/* End Image modal */
+/* End Photo Styles */
+
+/* Roster Styles */
+.cards-title {
+  font-size: 36px;
+  text-align: center;
+  color: var(--primary-color);
+  margin: 0;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 5%;
+}
+
+.card {
+  font-size: 25px;
+  box-sizing: border-box;
+  text-align: center;
+  color: var(--primary-color);
+  background-color: white;
+  width: 300px;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid var(--primary-color);
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
+}
+
+.card p {
+  font-size: 20px;
+  padding: 10px;
+}
+
+.card img {
+  width: 150px;
+  height: 150px;
+  padding: 5%;
+}
+
+.patrol {
+  padding: 100px;
+}
+/* End Roster Styles */
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
@@ -349,6 +478,10 @@ footer div {
 
   .header img {
     margin: 0;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -377,5 +510,9 @@ footer div {
   .hero-image h2 {
     margin-top: 70px;
     font-size: 35px;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
