--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,11 @@ body {
 .title {
   text-align: center;
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+}
 /* End General Styles */
 
 /* Header Styles */
@@ -294,6 +299,7 @@ footer h2 {
   display: block;
   padding: 7px 15px;
   font-size: 16px;
+  font-family: 'secret_typewriterregular';
   color: var(--primary-color);
   width: 90%;
   margin: 5px auto 15px auto;
@@ -329,6 +335,80 @@ footer h2 {
   color: var(--primary-color);
 }
 /* End Contact Form Styles */
+
+/* Events Styles */
+.year {
+  text-align: center;
+  font-size: 30px;
+}
+
+.events {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+}
+
+.events h3 {
+  font-size: 30px;
+  margin: 10px;
+}
+
+.events h4 {
+  font-size: 22px;
+  margin: 5px;
+}
+
+.events p {
+  font-size: 18px;
+  margin: 5px;
+}
+
+.events a {
+	color: var(--primary-color);
+  text-decoration: none;
+	cursor: pointer;
+  font-size: 25px;
+  margin: auto 0 10px 10px;
+}
+
+.events a:hover {
+  color: var(--secondary-color);
+}
+
+.eventImg img {
+  width: 100%;
+  height: 200px;
+  vertical-align: middle;
+  transition: 0.3s ease-in-out;
+}
+
+.eventImg img:hover {
+  transform: scale(1.1);
+}
+
+.left,
+.right {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  margin: 20px;
+  width: 60%;
+  height: 200px;
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
+}
+
+.left {
+  align-self: flex-start;
+}
+
+.right {
+  align-self: flex-end;
+}
+/* End Events Styles */
 
 /* Photo Styles */
 .photo-title {
