--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,20 +93,18 @@ header h1 {
   align-items: center;
   cursor: pointer;
   font-size: 35px;
-  width: 50px;
+  width: 140px;
   height: 45px;
-  position: fixed;
+  position: absolute;
   margin-top: 30px;
   margin-left: 30px;
   padding-bottom: 5px;
   border: 2px solid var(--primary-color);
-  border-radius: 8px;
   transition: 0.3s ease-in-out;
 }
 
 #main:hover {
   transform: scale(1.1);
-  background-color: var(--secondary-color);
 }
 
 @media screen and (max-height: 450px) {
@@ -142,7 +140,6 @@ header h1 {
 
 #myBtn:hover {
   transform: scale(1.1);
-  background-color: var(--secondary-color);
 }
 /* End Back To Top Button Styles */
 
@@ -154,7 +151,11 @@ footer {
 footer h2 {
   color: var(--primary-color);
   font-size: 20px;
-  margin: 0;
+  margin: 5px;
+}
+
+footer a {
+  text-decoration: none;
 }
 /* Footer Styles */
 
@@ -190,17 +191,9 @@ footer h2 {
 }
 
 .hero-image {
-  font-size: 45px;
-  text-align: center;
-  width: 600px;
-  height: 300px;
-  margin: 50px;
-  border: 1px solid var(--primary-color);
-  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
-}
-
-.hero-image h2 {
-  margin-top: 70px;
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 30px;
 }
 
 .hero-cta {
@@ -511,6 +504,11 @@ footer h2 {
 
 .soup h2 {
   margin-top: 70px;
+}
+
+.turtle {
+  text-align: center;
+  display: none;
 }
 /* End History of Soup Styles */
 
