modal image size adjustment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,12 +98,13 @@ header h1 {
   align-items: center;
   cursor: pointer;
   font-size: 35px;
+  font-weight: 600;
   width: 140px;
   height: 45px;
   position: absolute;
   margin-top: 30px;
   margin-left: 30px;
-  padding-bottom: 5px;
+  /* padding-bottom: 5px; */
   border: 2px solid var(--primary-color);
   transition: 0.3s ease-in-out;
 }
@@ -619,6 +620,10 @@ footer a {
   .header img {
     margin: 0;
   }
+
+  .modal img {
+    width: 80%;
+  }
   
   .gallery {
     grid-template-columns: repeat(2, 1fr);
@@ -669,6 +674,10 @@ footer a {
   .hero-image h2 {
     margin-top: 70px;
     font-size: 35px;
+  }
+
+  .modal img {
+    width: 100%;
   }
 
   .gallery {
