--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,6 +213,7 @@ footer a {
 
 .hero-cta p {
   font-size: 25px;
+  font-weight: 600;
   line-height: 32px;
 }
 /* End Hero Section Styles */
@@ -280,6 +281,7 @@ footer a {
 
 .contact-form label {
   font-size: 20px;
+  font-weight: 600;
 }
 
 .contact-form input,
@@ -442,6 +444,7 @@ footer a {
 
 .card p {
   font-size: 20px;
+  font-weight: 600;
   padding: 10px;
 }
 
@@ -496,6 +499,7 @@ footer a {
 .history p {
   max-width: 600px;
   font-size: 25px;
+  font-weight: 600;
   line-height: 32px;
   text-align: center;
   margin: auto;
