--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -667,7 +667,7 @@ footer a {
 /* Eagle Scouts Styles */
 .eagle-oath {
   text-align: center;
-  margin: 30px auto 60px auto;
+  margin: 60px auto;
 }
 
 .eagle-oath img {
