--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,12 +238,12 @@ footer a {
 }
 
 .hero-cta p {
-  max-width: 600px;
+  max-width: 1100px;
   font-size: 25px;
   font-weight: 600;
   line-height: 32px;
   text-align: center;
-  margin: auto;
+  margin: 30px;
 }
 /* End Hero Section Styles */
 
@@ -486,6 +486,7 @@ footer a {
 .gallery-item {
   cursor: pointer;
   overflow: hidden;
+  height: 200px;
   margin: 15px;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
 }
@@ -690,7 +691,7 @@ footer a {
 .eagle-scouts p {
   font-size: 25px;
   font-weight: 600;
-  margin: 5px;
+  margin: 10px;
 }
 
 .eagle-scouts div {
