add footer to all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,10 @@ footer a {
   text-decoration: none;
   color: #818181;
 }
+
+.dance {
+  color: white;
+}
 /* Footer Styles */
 
 /* Category Styles */
